# miniSOD2D

./: .gitignore  CMakeLists.txt  README.md  execution.sh  plot.py  speedup.py
cmake/: compilerOps.cmake  gpu.cmake  mpi.cmake
results/A100/: 01-baseline.md  02-convec_split.md
results/MI250X_GCD/: 01-baseline.md  02-convec_split.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/sources/: main.f90
src/fem/: CMakeLists.txt
src/fem/sources/: elem_hex.f90  elem_qua.f90  elem_tet.f90  jacobian_oper.f90  mod_gmsh_indices.f90  mod_ijk_indices.f90  quadrature_rules.f90
src/geometry/: CMakeLists.txt
src/geometry/sources/: mod_mesh.f90
src/kernels/: CMakeLists.txt
src/kernels/sources/: elem_convec.f90  elem_diffu.f90
src/utils/: CMakeLists.txt
src/utils/sources/: mod_constants.f90  mod_maths.f90  mod_numerical_params.f90  mod_nvtx.f90
